--- a/private/prototype.html
+++ b/private/prototype.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>strawman</title>
+	<script src="//use.typekit.net/hvo6ksf.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
-<body>
-ayy lmao
+<body class="tk-bookmania">
+	<nav>
+		<h1>strawman</h1>
+		<input type="text" name="handle" maxlength="20" autocomplete="off">
+	</nav>
 </body>
 </html>
