draft voting dom

--- a/private/prototype.html
+++ b/private/prototype.html
@@ -13,8 +13,11 @@
 	<main>
 		<section>
 			<header>
-				<h2>bernie sanders</h2>
-				<h2>donald trump</h2>
+				<div>
+					<h2>bernie sanders</h2>
+					<h2>donald trump</h2>
+				</div>
+				<progress value="3" max="5">
 			</header>
 			<p><span>ayylmao</span>you have seen italian organ-boys holding a dancing-ape by a long cord. just so, from the ship's steep side, did i hold queequeg down there in the sea, by what is technically called in the fishery a monkey-rope, attached to a strong strip of canvas belted round his waist.</p>
 			<p><span>gringus</span>the monkey-rope is found in all whalers</p>
@@ -22,7 +25,13 @@
 			<p><span>boxofinfants</span>we must now retrace our way a little. it was mentioned that upon first breaking ground in the whale's back, the blubber-hook was inserted into the original hole</p>
 			<p><span>bees</span>bees</p>
 			<footer>
-				<input type="text" name="message" maxlength="320">
+				<div>
+					<input type="text" name="message" maxlength="320">
+					<button type="button">
+						<span class="mdi mdi-close"></span>
+					</button>
+				</div>
+				<progress value="2" max="3">
  			</footer>
 		</section>
 		<section>
