--- a/private/prototype.html
+++ b/private/prototype.html
@@ -19,11 +19,13 @@
 				</div>
 				<progress value="3" max="5">
 			</header>
-			<p><span>ayylmao</span>you have seen italian organ-boys holding a dancing-ape by a long cord. just so, from the ship's steep side, did i hold queequeg down there in the sea, by what is technically called in the fishery a monkey-rope, attached to a strong strip of canvas belted round his waist.</p>
-			<p><span>gringus</span>the monkey-rope is found in all whalers</p>
-			<p><span>nomad</span>there is no staying in any one place</p>
-			<p><span>boxofinfants</span>we must now retrace our way a little. it was mentioned that upon first breaking ground in the whale's back, the blubber-hook was inserted into the original hole</p>
-			<p><span>bees</span>bees</p>
+			<ul>
+				<li><span>ayylmao</span>you have seen italian organ-boys holding a dancing-ape by a long cord. just so, from the ship's steep side, did i hold queequeg down there in the sea, by what is technically called in the fishery a monkey-rope, attached to a strong strip of canvas belted round his waist.</li>
+				<li><span>gringus</span>the monkey-rope is found in all whalers</li>
+				<li><span>nomad</span>there is no staying in any one place</li>
+				<li><span>boxofinfants</span>we must now retrace our way a little. it was mentioned that upon first breaking ground in the whale's back, the blubber-hook was inserted into the original hole</li>
+				<li><span>bees</span>bees</li>
+			</ul>
 			<footer>
 				<div>
 					<input type="text" name="message" maxlength="320">
