--- a/websocket-testing.html
+++ b/websocket-testing.html
@@ -20,11 +20,20 @@
 
   <h4>Send Message</h4>
   
-  <input id="text" type="text" placeholder="text"><br>
+  <input id="text" type="text" placeholder="text">
+  <select id="topics-sel">
+    <option value="0" disabled selected>Select your option</option> 
+  </select><br>
   <button onclick="sendMessage();">Send Message</button><br>
 
   <hr>
 
+  <h4>New Topic</h4>
+
+  <input id="option-a" type="text" placeholder="Option A">
+  <input id="option-b" type="text" placeholder="Option B">
+  <button onclick="newTopic();">New Topic</button><br>
+  
   <h4>Static Events</h4>
   
   <button onclick="getTopics();">Get Topics</button>
