--- a/static/prototype.html
+++ b/static/prototype.html
@@ -7,7 +7,7 @@
 	<script src="//use.typekit.net/hvo6ksf.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
-<body class="tk-bookmania strawman light">
+<body class="tk-bookmania strawman">
 	<header class="nav">
 		<h1>strawman</h1>
 		<input class="h2" type="text" name="handle" maxlength="20" autocomplete="off" placeholder="ayylmao">
