--- a/static/prototype.html
+++ b/static/prototype.html
@@ -10,7 +10,7 @@
 <body class="tk-bookmania strawman">
 	<header class="nav">
 		<h1>strawman</h1>
-		<input class="h2" type="text" name="handle" maxlength="20" autocomplete="off" placeholder="ayylmao">
+		<input type="text" name="handle" maxlength="20" autocomplete="off" placeholder="ayylmao">
 	</header>
 	<main class="columns">
 		<section class="chat">
@@ -30,7 +30,7 @@
 			</ul>
 			<footer>
 				<div>
-					<input class="d2" type="text" name="message" maxlength="320" placeholder="say something nice">
+					<input type="text" name="message" maxlength="320" placeholder="say something nice">
 					<button type="button">
 						<span class="mdi mdi-close"></span>
 					</button>
@@ -40,11 +40,11 @@
 		</section>
 		<section class="submit">
 			<div>
-				<input class="h0" type="text" name="thing_x" maxlength="40" placeholder="thing 1">
+				<input type="text" name="thing_x" maxlength="40" placeholder="thing 1">
 			</div>
 			<span class="d0">vs</span>
 			<div>
-				<input class="h0" type="text" name="thing_y" maxlength="40" placeholder="thing 2">
+				<input type="text" name="thing_y" maxlength="40" placeholder="thing 2">
 			</div>
 		</section>
 		<section></section>
