--- a/static/strawman.html
+++ b/static/strawman.html
@@ -42,7 +42,7 @@
 			<div>
 				<input type="text" name="thing_x" maxlength="40" placeholder="thing 1">
 			</div>
-			<span class="d0">vs</span>
+			<span>vs</span>
 			<div>
 				<input type="text" name="thing_y" maxlength="40" placeholder="thing 2">
 			</div>
