--- a/static/strawman.html
+++ b/static/strawman.html
@@ -4,6 +4,7 @@
 	<title>strawman</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="bower_components/mdi/css/materialdesignicons.css">
+	<script src="bower_components/webcomponentsjs/webcomponents.js"></script>
 	<script src="//use.typekit.net/hvo6ksf.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
